publish: fix: ActionMenu display on small screen with safe area
generated from commit f90521ac1f990ec303e08e9b7f49ce8f742397bc

--- a/react/main.css
+++ b/react/main.css
@@ -27488,6 +27488,8 @@ iframe {
 .c-actionmenu--22Fp1 {
   color: var(--primaryTextColor);
   --iconColor: var(--actionMenuIconColor);
+  padding-bottom: 0.563rem;
+  padding-bottom: env(safe-area-inset-bottom);
 }
 .c-actionmenu--22Fp1 hr {
   margin-top: 0;
@@ -27497,7 +27499,6 @@ iframe {
     border: 0;
     border-radius: 1rem 1rem 0 0;
     padding-top: 0.5rem;
-    padding-bottom: env(safe-area-inset-bottom);
     overflow: hidden;
   }
 }
